chore: prevent wobble on ios

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+ html {
+  overflow: hidden;
+  height: 100%;
+  position: fixed;
+}
+
+body {
+  overflow: auto;
+  height: 100%;
+  position: relative;
+}
